# threads-tda

./: .gitignore  Dockerfile  README.md  pyproject.toml
mongodb/: README.md
mongodb/docker/: README.md  docker-compose.yml
mongodb/helm/: README.md  values.yaml
mongodb/kubernetes/: README.md  configmap.yaml  deployment.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  secret.yaml  service.yaml
notebooks/: api.ipynb
src/: run.py  run_flow.py  t.py
src/models/: __init__.py  thread.py  user.py
src/utils/: __init__.py  database.py  settings.py  utils.py
threads_api/: test.ipynb
